tests/neg/i24825.scala
override trait T // error
override class X // error

package object p:
  override class Y // error
